--- a/springChap4-signUp/src/main/resources/templates/register.html
+++ b/springChap4-signUp/src/main/resources/templates/register.html
@@ -2,11 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="EUC-KR">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyT38Xn2NCAf3koqj4JfQY8o7b93aI93Y" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"></script>
+		
 	<title>회원가입</title>
 </head>
 
@@ -16,25 +24,27 @@
 			<div class="card-body">
 				<h2 class="card-title">회원가입</h2>
 				<form th:action="@{/members/register}" th:object="${member}" method="post">
+					
 					<div class="form-group">
 					<label for="username">아이디 : </label>
-					<input type="text" id="username" th:field="*{username}" required />
+					<input type="text" id="username"  class="form-control" th:field="*{username}" required />
 					</div>
 
 					<div class="form-group">
 					<label for="password">비밀번호 : </label>
 					<input type="text" id="password" class="form-control" th:field="*{password}" required />
-					<div />
+					</div>
 
 					<div class="form-group">
 					<label for="fullName">이름 : </label>
 					<input type="text" id="fullName" class="form-control" th:field="*{fullName}" required />
-					<div />
+					</div>
 
 					<div class="form-group">
 					<label for="email">이메일 : </label>
 					<input type="text" id="email" class="form-control" th:field="*{email}" required />
-					<div />
+					</div>
+					
 					<button type="submit" class="form-control">가입하기</button>
 				</form>
 			</div>
