--- a/springChap4-signUp/src/main/resources/templates/register.html
+++ b/springChap4-signUp/src/main/resources/templates/register.html
@@ -42,7 +42,11 @@
 
 					<div class="form-group">
 					<label for="email">이메일 : </label>
-					<input type="text" id="email" class="form-control" th:field="*{email}" required />
+					<input type="text" id="email" class="form-control" th:field="*{email}" 
+							th:value="${#oauth2.isMemberSignedIn() ? 
+							#authentication.principal.attribute['email'] 
+							: null
+							}" required />
 					</div>
 					
 					<button type="submit" class="form-control">가입하기</button>
