--- a/springChap4-signUp/src/main/resources/templates/login.html
+++ b/springChap4-signUp/src/main/resources/templates/login.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="EUC-KR">
+			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"></script>
 		<title>Login</title>
 	</head>
-	<body>
-	
-	</body>
+	<body class="bg-light">
+	<div class="container mt-5">
+		<div class="card">
+			<div class="card-body">
+				<h2 class="card-title">로그인</h2>
+				<form action="/members/login" method="post">
+					
+					<div class="form-group">
+					<label for="username">아이디 : </label>
+					<input type="text" id="username"  class="form-control" required />
+					</div>
+
+					<div class="form-group">
+					<label for="password">비밀번호 : </label>
+					<input type="text" id="password" class="form-control" required />
+					</div>
+					
+					<button type="submit" class="form-control btn btn-primary">로그인</button>
+				</form>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
