--- a/springChap6-kakaoLogin/src/main/resources/templates/index.html
+++ b/springChap6-kakaoLogin/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
 				|   | : 문자열 = 리터럴을 표현식안에 포함시킬 때 사용
 				@{  } : URL 표현식, 표현식 안에 있는 URL을 동적으로 생성 
 		 -->
-		<p>
-			<a th:href="@{|${kakaoUrl}|}">카카오 로그인</a>
-		</p>
+		<p><a th:href="@{|${kakaoUrl}|}">카카오 로그인</a>
+		<p><a th:href="@{|${naverUrl}|}">네이버 로그인</a>
+		
 	</body>
 </html>
